<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fxft.cheyoufuwu.ui.homePage.activity.IntegralExchangeActivity">

    <com.fxft.cheyoufuwu.common.view.CommonTopBar
        android:id="@+id/ctb_integral_exchange_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:left_bg="@drawable/common_bg_top_back"
        app:left_layout_enable="true"
        app:title_enable="true"
        app:title_text="@string/liantong_integral_exchange"
        app:title_text_color="@color/black"
        app:title_text_size="@dimen/middle_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_gray_line"/>

    <View
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/white">

        <EditText
            android:padding="@dimen/padding_10dp"
            android:background="@drawable/common_gray_radius_button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_exchange_integral"/>

    </LinearLayout>
    <TextView
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_integral_type"/>

    <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:textSize="@dimen/huge_text_size"
        android:textColor="@color/common_button_textcolor"
        android:text="0元"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_red_radius_button_bg"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/huge_text_size"
        android:text="@string/submit_intergral"/>


</LinearLayout>
